--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^8.2.9",
     "firebase-tools": "^9.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -37,8 +38,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
-
+  },
   "resolutions": {
     "styled-components": "^5"
   }
