--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-tools": "^9.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
